--- a/blog-details.html
+++ b/blog-details.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>YK SKIN THERAPY| Template</title>
+    <title>YK SKIN THERAPY</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                 <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
-            <div class="header__cart__price">item: <span>$150.00</span></div>
+            <div class="header__cart__price">item: <span>ugx 60000</span></div>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
@@ -82,7 +82,7 @@
         <div class="humberger__menu__contact">
             <ul>
                 <li><i class="fa fa-envelope"></i> kalungiy@gmail.com</li>
-                <li>Free Shipping for all Order of $99</li>
+                <li>Free Delivery for all Order of $99</li>
             </ul>
         </div>
     </div>
@@ -97,7 +97,7 @@
                         <div class="header__top__left">
                             <ul>
                                 <li><i class="fa fa-envelope"></i> kalungiy@gmail.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <li>Free Delivery for all Order of $99</li>
                             </ul>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                             <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        <div class="header__cart__price">item: <span>ugx 60000</span></div>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
+                                <h5>+256 773 765 153</h5>
                                 <span>support 24/7 time</span>
                             </div>
                         </div>
@@ -227,11 +227,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="blog__details__hero__text">
-                        <h2>The Moment You Need To Remove Garlic From The Menu</h2>
+                        <h2>beauty at your finger tips</h2>
                         <ul>
-                            <li>By Michael Scofield</li>
-                            <li>January 14, 2019</li>
-                            <li>8 Comments</li>
+                            <li>By Ntume Hamza</li>
+                            <li>june 14, 2024</li>
+                            <li>78 Comments</li>
                         </ul>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                             <ul>
                                 <li><a href="#">All</a></li>
                                 <li><a href="#">Beauty (20)</a></li>
-                                <li><a href="#">Food (5)</a></li>
+                                <li><a href="#">care (5)</a></li>
                                 <li><a href="#">Life Style (9)</a></li>
                                 <li><a href="#">Travel (10)</a></li>
                             </ul>
@@ -270,8 +270,8 @@
                                         <img src="img/blog/sidebar/sr-1.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>09 Kinds Of body cream<br /> Protect The Liver</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>09 Kinds to keep your skin glow<br /> Protect your skin</h6>
+                                        <span>june,07,2024</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -279,8 +279,8 @@
                                         <img src="img/blog/sidebar/sr-2.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>Tips You To Balance<br /> Nutrition Meal Day</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>Tips You To Balance<br /> how to make your skin glow</h6>
+                                        <span>june,07,2024</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -288,8 +288,8 @@
                                         <img src="img/blog/sidebar/sr-3.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>4 Principles Help You Lose <br />Weight With body cream</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>4 Principles <br />make your skin glow</h6>
+                                        <span>june,07,2024</span>
                                     </div>
                                 </a>
                             </div>
@@ -297,12 +297,12 @@
                         <div class="blog__sidebar__item">
                             <h4>Search By</h4>
                             <div class="blog__sidebar__item__tags">
-                                <a href="#">Apple</a>
-                                <a href="#">Beauty</a>
+                                <a href="#">black soap</a>
+                                <a href="#">pimples & acne soap</a>
                                 <a href="#">body cream</a>
-                                <a href="#">Fruit</a>
-                                <a href="#">Healthy Food</a>
-                                <a href="#">Lifestyle</a>
+                                <a href="#">hips & bums oil</a>
+                                <a href="#">pink lips therapy</a>
+                                <a href="#">skin oil</a>
                             </div>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
                                         <img src="img/blog/details/details-author.jpg" alt="">
                                     </div>
                                     <div class="blog__details__author__text">
-                                        <h6>Michael Scofield</h6>
+                                        <h6>NTUME HAMZA</h6>
                                         <span>Admin</span>
                                     </div>
                                 </div>
@@ -342,7 +342,7 @@
                                 <div class="blog__details__widget">
                                     <ul>
                                         <li><span>Categories:</span> Food</li>
-                                        <li><span>Tags:</span> All, Trending, Cooking, Healthy Food, Life Style</li>
+                                        <li><span>Tags:</span> All, Trending, soaps, skin care, oils</li>
                                     </ul>
                                     <div class="blog__details__social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -374,15 +374,16 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="blog__item">
+        
                         <div class="blog__item__pic">
                             <img src="img/blog/blog-1.jpg" alt="">
                         </div>
                         <div class="blog__item__text">
                             <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                                <li><i class="fa fa-calendar-o"></i> june 07,2024</li>
                                 <li><i class="fa fa-comment-o"></i> 5</li>
                             </ul>
-                            <h5><a href="#">Cooking tips make cooking simple</a></h5>
+                            <h5><a href="#"> how to take care of your skin</a></h5>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
                         </div>
                     </div>
@@ -394,11 +395,11 @@
                         </div>
                         <div class="blog__item__text">
                             <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                                <li><i class="fa fa-calendar-o"></i> june ,07,2024</li>
                                 <li><i class="fa fa-comment-o"></i> 5</li>
                             </ul>
-                            <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <h5><a href="#">6 ways to to make your skin lose weight</a></h5>
+                            <p>Sed </p>
                         </div>
                     </div>
                 </div>
@@ -409,11 +410,11 @@
                         </div>
                         <div class="blog__item__text">
                             <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                                <li><i class="fa fa-calendar-o"></i> june 07 ,2024</li>
                                 <li><i class="fa fa-comment-o"></i> 5</li>
                             </ul>
-                            <h5><a href="#">Visit the clean farm in the US</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <h5><a href="#">Visit our shop </a></h5>
+                            <p>Sed </p>
                         </div>
                     </div>
                 </div>
@@ -432,8 +433,8 @@
                             <a href="./index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                         <ul>
-                            <li>Address: 60-49 Road 11378 New York</li>
-                            <li>Phone: +65 11.188.888</li>
+                            <li>Address: kyanja , victern house building bahai road junction</li>
+                            <li>Phone: +256 773 765 153</li>
                             <li>Email: kalungiy@gmail.com</li>
                         </ul>
                     </div>
@@ -480,7 +481,7 @@
                 <div class="col-lg-12">
                     <div class="footer__copyright">
                         <div class="footer__copyright__text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved YK SKIN THERAPY  <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">NTUME HAMZA</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                         <div class="footer__copyright__payment"><img src="img/payment-item.png" alt=""></div>
                     </div>
